Update: Adição de novos dados e aplicação de funções

--- a/analise_de_dados_ceaps.ipynb
+++ b/analise_de_dados_ceaps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "id": "4a71a938-fa0f-442d-a96c-58f443143124",
    "metadata": {},
    "outputs": [
@@ -12,203 +12,208 @@
      "text": [
       "\n",
       "Iniciando Limpeza de dados\n",
-      "Index(['ANO', 'MES', 'SENADOR', 'TIPO_DESPESA', 'CNPJ_CPF', 'FORNECEDOR',\n",
-      "       'DOCUMENTO', 'DATA', 'DETALHAMENTO', 'VALOR_REEMBOLSADO',\n",
-      "       'COD_DOCUMENTO'],\n",
-      "      dtype='object')\n",
+      "Iniciando leitura e combinação dos arquivos...\n",
+      "Lendo arquivo: Dados/despesa_ceaps_2019.csv\n",
+      "Lendo arquivo: Dados/despesa_ceaps_2020.csv\n",
+      "Lendo arquivo: Dados/despesa_ceaps_2021.csv\n",
+      "Lendo arquivo: Dados/despesa_ceaps_2022.csv\n",
+      "\n",
+      "Concatenação concluída! DataFrame final criado.\n",
+      "\n",
+      "DataFrame combinado criado com sucesso! Iniciando a Limpeza...\n",
+      "\n",
+      "DataFrame original antes da limpeza:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 16805 entries, 0 to 16804\n",
+      "RangeIndex: 69356 entries, 0 to 69355\n",
       "Data columns (total 11 columns):\n",
       " #   Column             Non-Null Count  Dtype \n",
       "---  ------             --------------  ----- \n",
-      " 0   ANO                16805 non-null  int64 \n",
-      " 1   MES                16805 non-null  int64 \n",
-      " 2   SENADOR            16805 non-null  object\n",
-      " 3   TIPO_DESPESA       16805 non-null  object\n",
-      " 4   CNPJ_CPF           16805 non-null  object\n",
-      " 5   FORNECEDOR         16805 non-null  object\n",
-      " 6   DOCUMENTO          15871 non-null  object\n",
-      " 7   DATA               16805 non-null  object\n",
-      " 8   DETALHAMENTO       9062 non-null   object\n",
-      " 9   VALOR_REEMBOLSADO  16805 non-null  object\n",
-      " 10  COD_DOCUMENTO      16805 non-null  int64 \n",
+      " 0   ANO                69356 non-null  int64 \n",
+      " 1   MES                69356 non-null  int64 \n",
+      " 2   SENADOR            69356 non-null  object\n",
+      " 3   TIPO_DESPESA       69356 non-null  object\n",
+      " 4   CNPJ_CPF           69356 non-null  object\n",
+      " 5   FORNECEDOR         69356 non-null  object\n",
+      " 6   DOCUMENTO          66393 non-null  object\n",
+      " 7   DATA               69356 non-null  object\n",
+      " 8   DETALHAMENTO       38583 non-null  object\n",
+      " 9   VALOR_REEMBOLSADO  69356 non-null  object\n",
+      " 10  COD_DOCUMENTO      69356 non-null  int64 \n",
       "dtypes: int64(3), object(8)\n",
-      "memory usage: 1.4+ MB\n",
+      "memory usage: 5.8+ MB\n",
       "None\n",
-      "ANO                     0\n",
-      "MES                     0\n",
-      "SENADOR                 0\n",
-      "TIPO_DESPESA            0\n",
-      "CNPJ_CPF                0\n",
-      "FORNECEDOR              0\n",
-      "DOCUMENTO             934\n",
-      "DATA                    0\n",
-      "DETALHAMENTO         7743\n",
-      "VALOR_REEMBOLSADO       0\n",
-      "COD_DOCUMENTO           0\n",
-      "dtype: int64\n",
-      "ANO                  0\n",
-      "MES                  0\n",
-      "SENADOR              0\n",
-      "TIPO_DESPESA         0\n",
-      "CNPJ_CPF             0\n",
-      "FORNECEDOR           0\n",
-      "DOCUMENTO            0\n",
-      "DATA                 0\n",
-      "DETALHAMENTO         0\n",
-      "VALOR_REEMBOLSADO    0\n",
-      "COD_DOCUMENTO        0\n",
-      "dtype: int64\n",
-      "0\n",
       "datetime64[ns]\n",
-      "0           6000\n",
-      "1           1500\n",
-      "2           6000\n",
-      "3           1000\n",
-      "4           2000\n",
-      "          ...   \n",
-      "16800    2893,04\n",
-      "16801    1180,19\n",
-      "16802     2671,9\n",
-      "16803    1334,31\n",
-      "16804    2250,72\n",
-      "Name: VALOR_REEMBOLSADO, Length: 16805, dtype: object\n",
+      "\n",
+      "--- Iniciando a limpeza e conversão da coluna 'VALOR_REEMBOLSADO' ---\n",
+      "\n",
+      "Limpeza e conversão da coluna 'VALOR_REEMBOLSADO' concluída.\n",
+      "Tipo de dado DEPOIS da conversão: object\n",
+      "Pipeline de limpeza concluído!\n",
+      "\n",
+      "Visualização do DataFrame final:\n",
       "    ANO  MES       SENADOR                                       TIPO_DESPESA  \\\n",
-      "0  2022    1  ACIR GURGACZ  Aluguel de imóveis para escritório político, c...   \n",
-      "1  2022    1  ACIR GURGACZ                Divulgação da atividade parlamentar   \n",
-      "2  2022    1  ACIR GURGACZ                Divulgação da atividade parlamentar   \n",
-      "3  2022    1  ACIR GURGACZ                Divulgação da atividade parlamentar   \n",
-      "4  2022    1  ACIR GURGACZ                Divulgação da atividade parlamentar   \n",
+      "0  2019    1  ACIR GURGACZ  Aluguel de imï¿½veis para escritï¿½rio polï¿½t...   \n",
+      "1  2019    1  ACIR GURGACZ  Aluguel de imï¿½veis para escritï¿½rio polï¿½t...   \n",
+      "2  2019    1  ACIR GURGACZ  Aluguel de imï¿½veis para escritï¿½rio polï¿½t...   \n",
+      "3  2019    1  ACIR GURGACZ  Aluguel de imï¿½veis para escritï¿½rio polï¿½t...   \n",
+      "4  2019    2  ACIR GURGACZ  Aluguel de imï¿½veis para escritï¿½rio polï¿½t...   \n",
       "\n",
-      "             CNPJ_CPF                                         FORNECEDOR  \\\n",
-      "0      004.948.028-63                      GILBERTO PISELO DO NASCIMENTO   \n",
-      "1  26.320.603/0001-64                                      INFORMANAHORA   \n",
-      "2  13.659.201/0001-47                    LINHA PURPURA FOTO E VIDEO LTDA   \n",
-      "3  23.652.846/0001-01                  ROBERTO GUTIERREZ DA ROCHA M.E.I.   \n",
-      "4  08.941.827/0001-01  RONDONIA DINÂMICA COM. E SERV. DE INFORMÁTICA ...   \n",
+      "             CNPJ_CPF                     FORNECEDOR  DOCUMENTO       DATA  \\\n",
+      "0  05.914.650/0001-66                       ENERGISA  006582758 2019-01-04   \n",
+      "1  05.914.650/0001-66                       ENERGISA  006582755 2019-01-04   \n",
+      "2      004.948.028-63  GILBERTO PISELO DO NASCIMENTO      00119 2019-01-07   \n",
+      "3  05.423.963/0001-11                OI Mï¿½VEL S.A.   86161151 2018-12-25   \n",
+      "4  05.914.650/0001-66                       ENERGISA  007236036 2019-02-04   \n",
       "\n",
-      "           DOCUMENTO DATA                                       DETALHAMENTO  \\\n",
-      "0             001/22  NaT  Despesa com pagamento de aluguel de imóvel par...   \n",
-      "1  000000000000310/A  NaT  Despesa com divulgação da atividade parlamenta...   \n",
-      "2                107  NaT  Despesa com produção de texto e edição de víde...   \n",
-      "3                187  NaT                Divulgação da atividade parlamentar   \n",
-      "4  000000000001772/A  NaT                Divulgação da atividade parlamentar   \n",
+      "                                        DETALHAMENTO VALOR_REEMBOLSADO  \\\n",
+      "0  Despesa com pagamento de energia elï¿½trica do...             66.02   \n",
+      "1  Despesa com pagamento de energia elï¿½trica do...            139.98   \n",
+      "2  Despesa com pagamento de aluguel de imï¿½vel p...            6000.0   \n",
+      "3  Despesa com pagamento de telefonia para o escr...            316.39   \n",
+      "4  Despesa com pagamento de energia elï¿½trica pa...             99.45   \n",
       "\n",
-      "   VALOR_REEMBOLSADO  COD_DOCUMENTO  \n",
-      "0             6000.0        2173614  \n",
-      "1             1500.0        2173615  \n",
-      "2             6000.0        2173616  \n",
-      "3             1000.0        2173618  \n",
-      "4             2000.0        2173617  \n",
-      "        ANO  MES           SENADOR  \\\n",
-      "16800  2022   12  ZEQUINHA MARINHO   \n",
-      "16801  2022   12  ZEQUINHA MARINHO   \n",
-      "16802  2022   12  ZEQUINHA MARINHO   \n",
-      "16803  2022   12  ZEQUINHA MARINHO   \n",
-      "16804  2022   12  ZEQUINHA MARINHO   \n",
+      "   COD_DOCUMENTO  \n",
+      "0        2116543  \n",
+      "1        2116546  \n",
+      "2        2113817  \n",
+      "3        2116541  \n",
+      "4        2116550  \n",
       "\n",
-      "                                            TIPO_DESPESA            CNPJ_CPF  \\\n",
-      "16800  Passagens aéreas, aquáticas e terrestres nacio...  22.052.777/0001-32   \n",
-      "16801  Passagens aéreas, aquáticas e terrestres nacio...  22.052.777/0001-32   \n",
-      "16802  Passagens aéreas, aquáticas e terrestres nacio...  22.052.777/0001-32   \n",
-      "16803  Passagens aéreas, aquáticas e terrestres nacio...  22.052.777/0001-32   \n",
-      "16804  Passagens aéreas, aquáticas e terrestres nacio...  22.052.777/0001-32   \n",
-      "\n",
-      "          FORNECEDOR DOCUMENTO DATA  \\\n",
-      "16800  Exceller Tour    WIXHAI  NaT   \n",
-      "16801  Exceller Tour    WITOLM  NaT   \n",
-      "16802  Exceller Tour    THPKVQ  NaT   \n",
-      "16803  Exceller Tour    QNN9HX  NaT   \n",
-      "16804  Exceller Tour    WMQWBX  NaT   \n",
-      "\n",
-      "                                            DETALHAMENTO  VALOR_REEMBOLSADO  \\\n",
-      "16800  Companhia Aérea: LATAM, Localizador: WIXHAI. P...            2893.04   \n",
-      "16801  Companhia Aérea: GOL, Localizador: WITOLM. Pas...            1180.19   \n",
-      "16802  Companhia Aérea: TAM, Localizador: THPKVQ. Pas...            2671.90   \n",
-      "16803  Companhia Aérea: AZUL, Localizador: QNN9HX. Pa...            1334.31   \n",
-      "16804  Companhia Aérea: TAM, Localizador: WMQWBX. Pas...            2250.72   \n",
-      "\n",
-      "       COD_DOCUMENTO  \n",
-      "16800        2191398  \n",
-      "16801        2192272  \n",
-      "16802        2192274  \n",
-      "16803        2192244  \n",
-      "16804        2193622  \n",
+      "Informações do DataFrame final (verifique os tipos de dados):\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 16805 entries, 0 to 16804\n",
+      "RangeIndex: 69356 entries, 0 to 69355\n",
       "Data columns (total 11 columns):\n",
       " #   Column             Non-Null Count  Dtype         \n",
       "---  ------             --------------  -----         \n",
-      " 0   ANO                16805 non-null  int64         \n",
-      " 1   MES                16805 non-null  int64         \n",
-      " 2   SENADOR            16805 non-null  object        \n",
-      " 3   TIPO_DESPESA       16805 non-null  object        \n",
-      " 4   CNPJ_CPF           16805 non-null  object        \n",
-      " 5   FORNECEDOR         16805 non-null  object        \n",
-      " 6   DOCUMENTO          16805 non-null  object        \n",
-      " 7   DATA               0 non-null      datetime64[ns]\n",
-      " 8   DETALHAMENTO       16805 non-null  object        \n",
-      " 9   VALOR_REEMBOLSADO  16805 non-null  float64       \n",
-      " 10  COD_DOCUMENTO      16805 non-null  int64         \n",
-      "dtypes: datetime64[ns](1), float64(1), int64(3), object(6)\n",
-      "memory usage: 1.4+ MB\n",
-      "None\n",
-      "\n",
-      "Limpeza de dados concluída com sucesso\n"
+      " 0   ANO                69356 non-null  int64         \n",
+      " 1   MES                69356 non-null  int64         \n",
+      " 2   SENADOR            69356 non-null  object        \n",
+      " 3   TIPO_DESPESA       69356 non-null  object        \n",
+      " 4   CNPJ_CPF           69356 non-null  object        \n",
+      " 5   FORNECEDOR         69356 non-null  object        \n",
+      " 6   DOCUMENTO          69356 non-null  object        \n",
+      " 7   DATA               69353 non-null  datetime64[ns]\n",
+      " 8   DETALHAMENTO       69356 non-null  object        \n",
+      " 9   VALOR_REEMBOLSADO  69356 non-null  object        \n",
+      " 10  COD_DOCUMENTO      69356 non-null  int64         \n",
+      "dtypes: datetime64[ns](1), int64(3), object(7)\n",
+      "memory usage: 5.8+ MB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "df_ceaps = pd.read_csv('Dados/despesa_ceaps_2022.csv', \n",
-    "                      encoding='latin-1',\n",
-    "                      sep=';',\n",
-    "                      skiprows=1)\n",
+    "import numpy as np\n",
+    "import os\n",
     "\n",
     "print(\"\\nIniciando Limpeza de dados\")\n",
-    "# Veficicando as colunas do dataframe\n",
-    "print(df_ceaps.columns)\n",
-    "# Exibir resumo das colunas\n",
-    "print(df_ceaps.info())\n",
-    "# Verificação no inicio e final do dataframe\n",
-    "#print(df_ceaps.head())\n",
-    "#print(df_ceaps.tail())\n",
     "\n",
-    "# Verificar quantas células estão nulas\n",
-    "print(df_ceaps.isnull().sum())\n",
-    "# Preenchendo valores nulos da coluna \"DETALHAMENTO\" com 'Nenhum registro encontrado'\n",
-    "df_ceaps['DETALHAMENTO'] = df_ceaps['DETALHAMENTO'].fillna('Nenhum registro encontrado')\n",
-    "df_ceaps['DOCUMENTO'] = df_ceaps['DOCUMENTO'].fillna('s/n')\n",
-    "# Conferir novamente se ainda há valores nulos\n",
-    "print(df_ceaps.isnull().sum())\n",
-    "# Verificar quantas linhas estão duplicadas\n",
-    "print(df_ceaps.duplicated().sum())\n",
+    "def ler_e_combinar_csvs(lista_de_caminhos):\n",
+    "    lista_de_dfs = []\n",
+    "    \n",
+    "    for caminho_arquivo in lista_de_caminhos:\n",
+    "        try:\n",
+    "            print(f\"Lendo arquivo: {caminho_arquivo}\")\n",
+    "            df_temp = pd.read_csv(caminho_arquivo,\n",
+    "                                  encoding='latin-1',\n",
+    "                                  sep=';')\n",
+    "            # CORREÇÃO: Esta linha deve estar dentro do 'try'\n",
+    "            lista_de_dfs.append(df_temp)\n",
+    "        except FileNotFoundError:\n",
+    "            print(f\"ERRO: Arquivo não encontrado no caminho: {caminho_arquivo}. Pulando...\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"ERRO: Ocorreu um erro ao ler o arquivo {caminho_arquivo}: {e}\")\n",
+    "            \n",
+    "    if not lista_de_dfs:\n",
+    "        print(\"Nenhum arquivo CSV foi lido. Retornando com None.\")\n",
+    "        return None\n",
     "\n",
-    "# Verificação no inicio e final das colunas \n",
-    "#print(df_ceaps[['DETALHAMENTO','DOCUMENTO']].head(50))\n",
-    "#print(df_ceaps[['DETALHAMENTO','DOCUMENTO']].tail(50))\n",
+    "    df_combinado = pd.concat(lista_de_dfs, ignore_index=True)\n",
+    "    print(\"\\nConcatenação concluída! DataFrame final criado.\")\n",
+    "    return df_combinado        \n",
+    "    \n",
+    "def preencher_nulos_detalhamento(df, coluna_detalhamento):\n",
+    "    #Preenche os valores nulos em uma coluna de detalhamento com uma string padrão.\n",
+    "    df.loc[:, coluna_detalhamento] = df[coluna_detalhamento].fillna('Nenhum registro encontrado')\n",
+    "    return df\n",
     "\n",
-    "# Convertendo a coluna 'DATA' para o tipo datetime\n",
-    "df_ceaps['DATA'] = pd.to_datetime(df_ceaps['DATA'], format='%Y-%m-%d', errors='coerce')\n",
-    "print(df_ceaps['DATA'].dtype)\n",
-    "print(df_ceaps['VALOR_REEMBOLSADO'])\n",
+    "def preencher_nulos_documento(df, coluna_documento):\n",
+    "    #Preenche os valores nulos em uma coluna de documento com uma string padrão.\n",
+    "    df.loc[:, coluna_documento] = df[coluna_documento].fillna('s/n')\n",
+    "    return df\n",
     "\n",
-    "# Removendo 'R$', pontos e substituindo a vírgula por ponto\n",
-    "df_ceaps['VALOR_REEMBOLSADO'] = df_ceaps['VALOR_REEMBOLSADO'].str.replace('R$', '', regex=False)\n",
-    "df_ceaps['VALOR_REEMBOLSADO'] = df_ceaps['VALOR_REEMBOLSADO'].str.replace('.', '', regex=False)\n",
-    "df_ceaps['VALOR_REEMBOLSADO'] = df_ceaps['VALOR_REEMBOLSADO'].str.replace(',', '.', regex=False)\n",
+    "def limpar_e_converter_data(df, coluna_data):\n",
+    "    # CORRIGIDO: Esta função agora é a de limpeza de data\n",
+    "    \"\"\"\n",
+    "    Função que limpa e converte uma coluna de data em um DataFrame.\n",
+    "    \"\"\"\n",
+    "    df['DATA_TEMP'] = pd.to_datetime(df[coluna_data], format='%d/%m/%Y', errors='coerce')\n",
+    "    print(df['DATA_TEMP'].dtype)\n",
     "\n",
-    "df_ceaps['VALOR_REEMBOLSADO'] = pd.to_numeric(df_ceaps['VALOR_REEMBOLSADO'])\n",
+    "    df[coluna_data] = df['DATA_TEMP']\n",
+    "    df = df.drop('DATA_TEMP', axis=1)\n",
+    "    return df\n",
     "\n",
-    "# Verificação no inicio e final do dataframe \n",
-    "print(df_ceaps.head())\n",
-    "print(df_ceaps.tail())\n",
+    "def limpar_e_converter_valor_reembolsado(df, coluna_valor):\n",
+    "    \"\"\"\n",
+    "    Limpa e converte uma coluna de valores monetários para tipo numérico\n",
+    "    de forma robusta, garantindo o tipo final float64.\n",
+    "    \"\"\"\n",
+    "    print(f\"\\n--- Iniciando a limpeza e conversão da coluna '{coluna_valor}' ---\")\n",
+    "    \n",
+    "    # Passo 1: Cria uma cópia da série para evitar problemas\n",
+    "    s = df[coluna_valor].copy()\n",
+    "    \n",
+    "    # Passo 2: Garante que todos os valores são strings para a limpeza funcionar\n",
+    "    s = s.astype(str)\n",
+    "    \n",
+    "    # Passo 3: Limpeza dos caracteres indesejados\n",
+    "    s = (s\n",
+    "         .str.replace('R$', '', regex=False)\n",
+    "         .str.replace('.', '', regex=False)\n",
+    "         .str.replace(',', '.', regex=False)\n",
+    "         .str.strip()  # Remove espaços em branco\n",
+    "        )\n",
     "\n",
-    "# Exibir novo resumo das colunas\n",
-    "print(df_ceaps.info())\n",
+    "    # Passo 4: Substitui explicitamente strings vazias por NaN\n",
+    "    s = s.replace('', np.nan)\n",
+    "    \n",
+    "    # Passo 5: Converte para numérico, tratando erros e forçando o tipo\n",
+    "    s = pd.to_numeric(s, errors='coerce')\n",
+    "    s = s.astype('float64')\n",
     "\n",
-    "print('\\nVERIFIQUE POR QUE VALORES DA COLUNA DATA ESTÃO BUGADOS')\n"
+    "    # Passo 6: Atribui a série limpa e convertida de volta ao DataFrame\n",
+    "    df.loc[:, coluna_valor] = s\n",
+    "    \n",
+    "    print(f\"\\nLimpeza e conversão da coluna '{coluna_valor}' concluída.\")\n",
+    "    print(f\"Tipo de dado DEPOIS da conversão: {df[coluna_valor].dtype}\")\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "lista_de_caminhos = ['Dados/despesa_ceaps_2019.csv', 'Dados/despesa_ceaps_2020.csv', 'Dados/despesa_ceaps_2021.csv', 'Dados/despesa_ceaps_2022.csv']\n",
+    "\n",
+    "print(\"Iniciando leitura e combinação dos arquivos...\")\n",
+    "df_ceaps = ler_e_combinar_csvs(lista_de_caminhos)\n",
+    "\n",
+    "if df_ceaps is not None:\n",
+    "    print(\"\\nDataFrame combinado criado com sucesso! Iniciando a Limpeza...\")\n",
+    "    print(\"\\nDataFrame original antes da limpeza:\")\n",
+    "    print(df_ceaps.info())\n",
+    "\n",
+    "    # ORDEM CORRETA DAS CHAMADAS\n",
+    "    df_ceaps = limpar_e_converter_data(df_ceaps, 'DATA')\n",
+    "    df_ceaps = preencher_nulos_documento(df_ceaps, 'DOCUMENTO')\n",
+    "    df_ceaps = preencher_nulos_detalhamento(df_ceaps, 'DETALHAMENTO')\n",
+    "    df_ceaps = limpar_e_converter_valor_reembolsado(df_ceaps, 'VALOR_REEMBOLSADO')\n",
+    "\n",
+    "    print(\"Pipeline de limpeza concluído!\")\n",
+    "    print(\"\\nVisualização do DataFrame final:\")\n",
+    "    print(df_ceaps.head())\n",
+    "    print(\"\\nInformações do DataFrame final (verifique os tipos de dados):\")\n",
+    "    print(df_ceaps.info())\n",
+    "else:\n",
+    "    print(\"Falha ao criar o DataFrame. Verifique se os arquivos existem nos caminhos informados.\")\n"
    ]
   },
   {
